--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="/css/responsive.css">
 <script src="/js/jquery.js"></script>
 <script src="/js/basics.js"></script>
+<script data-ad-client="ca-pub-3850642260588440" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
 <meta content="text/html; charset=utf-8" http-equiv="content-type">
 
